# chocothon

./: .gitignore  CMakeLists.txt  README.md  mac-to-utf8.sh
infinity_source/: CMakeLists.txt  README  inf_worksheet
infinity_source/CSeriesInterfaces/: CMakeLists.txt  checksum.h  mytm.h
infinity_source/CSeriesLibraries/: CMakeLists.txt  DrawSprocket.h  InputSprocket.h
infinity_source/cseries/: SoundSprocket.h
infinity_source/cserieslib/: AfterDarkGestalt.h  RequestVideo.c  RequestVideo.h  buildprogram  byte_swapping.c  checksum.c  device_dialog.c  devices.c  dialogs.c  macintosh_interfaces.c  macintosh_utilities.c  makefile  my32bqd.c  mytm.c  preferences.c  proximity_strcmp.c  rle.c  textures.h
infinity_source/cserieslib/anachronisms/: RequestVideo.c  RequestVideo.h  cseries.lib.make  cseries.xcoff.make  devices.c  dialogs.c  macintosh_cseries.h  macintosh_utilities.c  mytm.c  mytm.h  preferences.c  temporary_files.c
infinity_source/marathon2/: CMakeLists.txt  buildoutput  buildprogram  computer_interface.c  computer_interface.h  devices.c  editor.h  effect_definitions.h  effects.h  export_definitions.c  export_definitions.make  find_files.c  game_dialogs.c  game_errors.c  game_sound.h  game_wad.c  game_wad.h  game_window.c  game_window_macintosh.c  import_definitions.c  input_sprocket_needs.h  interface.c  interface.h  items.c  key_definitions.h  keyboard_dialog.c  lightsource.h  low_level_textures.c  macintosh_input.h  macintosh_network.h  makefile  map.c  map.h  map_constructors.c  media.c  media.h  monsters.h  motion_sensor.c  mouse.c  music.c  (+56 more)
infinity_source/marathon2/anachronisms/: buildprogram  cybermaxx.c  definitions.h  doors.c  doors.h  editor_map.h  export_definitions.make  (+23 more)
src/: CMakeLists.txt  collection_definition.h  computer_interface.c  crc.c  crc.h  effects.c  fades.c  fades.h  files_chocothon.c  files_macintosh.c  find_files.h  flood_map.c  game_errors.c  game_errors.h  game_sound.c  game_sound.h  images.c  interface.c  interface.h  interface_macintosh.c  item_definitions.h  items.h  lightsource.c  main.c  map_accessors.c  marathon2.c  media_definitions.h  monster_definitions.h  monsters.c  music.c  network_adsp.c  network_dialogs.c  network_games.c  network_lookup.c  network_microphone.c  network_modem_protocol.c  network_speaker.c  overhead_map.c  overhead_map_macintosh.c  placement.c  (+26 more)
src/cseries/: DrawSprocket.h  chocothon_types.h  cseries.h  macintosh_cseries.h  mytm.c  mytm.h
(+3 files in other folders)
